# school_management

./: CMakeLists.txt  employee_management  main.cpp  todo.txt
include/: Student.h  database.h
models/: Student.cpp
src/: database.cpp  main.cpp
